# fastapi-langgraph-langfuse-rag-starter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  format.py  pyproject.toml  run_local.py  seed_data.py
app/: main.py
app/api/routes/: agent.py  document.py
app/config/: logging_config.py  settings.py
app/core/: agent.py  database.py  rag.py
app/models/: requests.py  responses.py
app/utils/: document_processor.py  vector_store.py
data/documents/examples/: customer_segmentation_strategies.md  email_marketing_best_practices.txt
data/vector_db/: faiss_index.idx  metadata.pkl
